# plasma-python

./: .gitignore  .travis.yml  Analyze Hyperparameter Tuning.ipynb  README.md  makedocs.py  requirements-travis.txt  requirements.txt  setup.cfg  setup.py
data/: d3d_signals.py  gadata.py  get_data.py  get_mdsplus_data.py  jet_signals.py  signals.py
docs/: A21-DL-Workload-README.md  ALCF.md  ANL_Theta.md  Install.md  Model.md  OLCF-AMD.md  Preprocessing.md  Primitives.md  PrincetonUTutorial.md  Targets.md  Titan.md  TraverseTutorial.md  genindex.html  index.html  objects.inv  plasma.models.builder.LossHistory.html  plasma.models.builder.ModelBuilder.html  plasma.models.builder.ModelBuilder.rst  plasma.models.loader.Loader.html  plasma.models.mpi_runner.Averager.html  plasma.models.mpi_runner.MPIAdam.html  plasma.models.mpi_runner.MPIModel.html  plasma.models.mpi_runner.MPIOptimizer.html  plasma.models.mpi_runner.MPIOptimizer.rst  plasma.models.mpi_runner.MPISGD.html  plasma.models.mpi_runner.add_params.html  plasma.models.mpi_runner.get_shot_list_path.html  plasma.models.mpi_runner.load_shotlists.html  plasma.models.mpi_runner.load_shotlists.rst  plasma.models.mpi_runner.mpi_make_predictions.html  plasma.models.mpi_runner.mpi_make_predictions.rst  plasma.models.mpi_runner.mpi_make_predictions_and_evaluate.html  plasma.models.mpi_runner.mpi_train.html  plasma.models.mpi_runner.multiply_params.html  plasma.models.mpi_runner.print_all.html  plasma.models.mpi_runner.print_unique.html  plasma.models.mpi_runner.save_shotlists.html  plasma.models.mpi_runner.save_shotlists.rst  (+53 more)
(+229 files in other folders)
