[metadata]
description-file = README.md

[flake8]
max-line-length = 79
ignore =
       # Subset of DEFAULT_IGNORE error codes from pycodestyle
       # (not universally accepted / not enforced by PEP 8 document)
       # E1: Indentation
       # E121: continuation line under-indented for hanging indent (allow fewer than 4 spaces w/ hanging indent)
       E121,
       # E123: closing bracket does not match indentation of opening bracket’s line
       E123,
       # E126: continuation line over-indented for hanging inden (allow fewer than 4 spaces w/ hanging indent)
       E126,
       # E2: Whitespace
       # E226: missing whitespace around arithmetic operator (allow nx+1, ...)
       E226,
       # E241: multiple spaces after ‘,’
       E241,
       # E7: Statements
       # E704: multiple statements on one line (def)
       E704,
       # E731: Do not assign a lambda expression, use a def
       E731,
       # W5: Line break warning
       # W503: line break before binary operator (use mutually exclusive W504)
       W503
# suppress linter warning about MPI init fn call before module-level imports
# and long comment lines in externally-written tcn.py
per-file-ignores =
       mpi_learn.py:E402
       tcn.py:E501       
